--- a/Cadastro/visualCadastro/geralCadastro/1.css
+++ b/Cadastro/visualCadastro/geralCadastro/1.css
@@ -1,44 +1,10 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #c3cad4;
+    background-color:  #093774;
     display: flex;
     justify-content: center;
-    align-items: center;
     height: 100vh;
-}
-
-section {
-    background-color: #fff;
-    border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-}
-
-label {
-    font-weight: bold;
-    margin-right: 10px;
-    color: #696969;
-}
-
-input [type="text"] {
-    padding: 8px;
-    border-radius: 8px;
-    border: 1px solid #adadad;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-input [type="password"] {
-    padding: 8px;
-    border-radius: 8px;
-    border: 1px solid #adadad;
-    width: 100%;
-    box-sizing: border-box;
+    margin-top: 6%;
 }
 
 button {
@@ -46,7 +12,7 @@ button {
     background-color: #007bff;
     color: #fff;
     border: none;
-    border-radius: 4px;
+    border-radius: 13px;
     cursor: pointer;
     font-size: 16px;
 }
@@ -74,35 +40,26 @@ button:hover {
     text-align: center;
 }
 
-#pai {
-    border-color: rgb(204, 204, 204);
-    border-width: 2px;
-    border-style:solid;
-    border-radius: 10px;
-    margin: ;
-}
-
-.campo {
-    display: flex;
-    margin-bottom: 15px;
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-#login {
-    font-weight: bold;
-    color: #696969;
-    font-size: 25px;
+#cadastro {
+  padding: 10px 20px;
+  color: #474747;
+  font-size: 24;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  margin-top: 0px;
+  letter-spacing: 2px
 }
 
 #EPTRAN {
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: bold;
-    color: #272727;
-    font-size: 30px;
-    text-align: center;
-    margin-bottom:60px;
+  padding: 10px 20px;
+  color: #ffffff;
+  font-size: 34px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  margin-top: 0px;
+  letter-spacing: 2px
 }
 
 .ESS {
@@ -110,4 +67,127 @@ button:hover {
     text-align: center;
     margin-bottom: 10px;
     margin-top: 10px;
+}
+
+.login-box {
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    width: 330px;
+    padding-left: 35px;
+    padding-right: 35px;
+    padding-top: 20px;
+    transform: translate(-50%, -50%);
+    background: rgba(255, 255, 255, 0.987);
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    border-radius: 10px;
+}
+
+  .login-box .user-box {
+    position: relative;
+}
+  
+.login-box .user-box input {
+    width: 100%;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #474747;
+    margin-bottom: 25px;
+    border: none;
+    border-bottom: 1px solid #000000;
+    outline: none;
+    background: transparent;
+ }
+  
+.login-box .user-box label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #474747;
+    pointer-events: none;
+    transition: .5s;
+}
+  
+.login-box .user-box input:focus ~ label,
+.login-box .user-box input:valid ~ label {
+    top: -20px;
+    left: 0;
+    color: #696969;
+    font-size: 12px;
+}
+  
+.login-box form a {
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    color: #000000;
+    font-size: 14px;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    margin-top: 0px;
+    letter-spacing: 2px
+}
+  
+  .login-box a span {
+    position: absolute;
+    display: block;
+}
+
+  
+.login-box a span:nth-child(1) {
+    bottom: 2px;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #ffffff);
+    animation: btn-anim1 2s linear infinite;
+}
+
+.b {
+    color: red;
+}
+
+.date-box {
+    position: relative;
+}
+  
+.date-box input {
+    width: 100%;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #ffffff;
+    margin-bottom: 25px;
+    border: none;
+    border-bottom: 1px solid #000000;
+    outline: none;
+    background: transparent;
+}
+  
+.date-box label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #474747;
+    pointer-events: none;
+    transition: .5s;
+}
+  
+.date-box input:focus ~ label,
+.date-box input:valid ~ label {
+    top: -20px;
+    left: 0;
+    color: #696969;
+    font-size: 12px;
+}
+
+.date-box input:focus,
+.date-box input:valid {
+    color:#696969;
+
 }
