--- a/styles/inicio.css
+++ b/styles/inicio.css
@@ -1,41 +1,54 @@
-body{
+body {
     background-color:#ffffff;
     background-image: url(../imagensEptranInicio/rua.png);
     background-repeat: no-repeat;
     background-position: center;
     height: 600px;
+    margin: 0%;
 
 }
 
-header{
+header {
     background-color:#093774;
 }
-#sec{
+
+#sec {
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
-#eptran{
+
+#eptran {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
     align-items: center;
     justify-content: center;
     height: 30%;
+    padding-left: 20%;
 }
+
 button {
     all: unset;
     cursor: pointer;
     outline: revert;
 }
-#linhainicio{
+
+#linhainicio {
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
     color: white;
     background-color: black;
 }
-#title{
+
+#title {
     margin-left: 5%;
     text-align:left;
     color:black;
     background-color:white;
     text-decoration:underline;
+}
+
+#logopref img {
+    width: 75%;
+    padding-left: 20%;
 }
