--- a/styles/inicio.css
+++ b/styles/inicio.css
@@ -1,18 +1,24 @@
 body{
     background-color:#ffffff;
-    background-image: url(../imagensEptranInicio/rua.png);
+    background-image: url(imagens/Rua.png);
     background-repeat: no-repeat;
     background-position: center;
     height: 600px;
 
 }
-
 header{
     background-color:#093774;
 }
 #sec{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
+}
+#menu{
+    margin-left: 2%;
+}
+#logopref{
+    margin-right: 2%;
 }
 #eptran{
     font-family: Georgia, 'Times New Roman', Times, serif;
