--- a/styles/cadastro.css
+++ b/styles/cadastro.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color:  #093774;
+    background-color:  #023859;
     display: flex;
     justify-content: center;
     height: 100vh;
@@ -10,8 +10,8 @@ body {
 
 button {
     padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
+    background-color: #F2B807;
+    color: #f2f2f2;
     border: none;
     border-radius: 13px;
     cursor: pointer;
@@ -54,7 +54,7 @@ button:hover {
 
 #EPTRAN {
   padding: 10px 20px;
-  color: #ffffff;
+  color: #f2f2f2;
   font-size: 34px;
   text-decoration: none;
   text-transform: uppercase;
