--- a/styles/esqueceuSenha.css
+++ b/styles/esqueceuSenha.css
@@ -1,31 +1,31 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color:  #023859;
-    display: flex;
-    justify-content: center;
-    height: 100vh;
-    margin-top: -7%;
-    margin-bottom: 15%;
+  font-family: Arial, sans-serif;
+  background-color: #023859;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  margin-top: -7%;
+  margin-bottom: 15%;
 }
 
 button {
-    padding: 10px 20px;
-    background-color: #F2B807;
-    color: #f2f2f2;
-    border: none;
-    border-radius: 13px;
-    cursor: pointer;
-    font-size: 16px;
+  padding: 10px 20px;
+  background-color: #f2b807;
+  color: #f2f2f2;
+  border: none;
+  border-radius: 13px;
+  cursor: pointer;
+  font-size: 16px;
 }
 
 button:hover {
-    background-color: #F2B807;
+  background-color: #f2b807;
 }
 
 #btn {
-    text-align: center;
-    margin-bottom: 5px;
-    margin-top: 5px;
+  text-align: center;
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 
 #trocar {
@@ -36,7 +36,7 @@ button:hover {
   text-transform: uppercase;
   overflow: hidden;
   margin-top: 0px;
-  letter-spacing: 2px
+  letter-spacing: 2px;
 }
 
 texto {
@@ -47,7 +47,7 @@ texto {
   text-transform: uppercase;
   overflow: hidden;
   margin-top: 0px;
-  letter-spacing: 2px
+  letter-spacing: 2px;
 }
 
 #EPTRAN {
@@ -58,92 +58,90 @@ texto {
   text-transform: uppercase;
   overflow: hidden;
   margin-top: 0px;
-  letter-spacing: 2px
+  letter-spacing: 2px;
 }
 
 .login-box {
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    width: 330px;
-    padding-left: 35px;
-    padding-right: 35px;
-    padding-top: 20px;
-    transform: translate(-50%, -50%);
-    background: rgba(255, 255, 255, 0.987);
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
-    border-radius: 10px;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  width: 330px;
+  padding-left: 35px;
+  padding-right: 35px;
+  padding-top: 20px;
+  transform: translate(-50%, -50%);
+  background: rgba(255, 255, 255, 0.987);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
 }
 
-  .login-box .user-box {
-    position: relative;
+.login-box .user-box {
+  position: relative;
 }
-  
+
 .login-box .user-box input {
-    width: 100%;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #474747;
-    margin-bottom: 25px;
-    border: none;
-    border-bottom: 1px solid #000000;
-    outline: none;
-    background: transparent;
- }
-  
-.login-box .user-box label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #474747;
-    pointer-events: none;
-    transition: .5s;
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #474747;
+  margin-bottom: 25px;
+  border: none;
+  border-bottom: 1px solid #000000;
+  outline: none;
+  background: transparent;
 }
-  
+
+.login-box .user-box label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #474747;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
 .login-box .user-box input:focus ~ label,
 .login-box .user-box input:valid ~ label {
-    top: -20px;
-    left: 0;
-    color: #696969;
-    font-size: 12px;
-}
-  
-.login-box form a {
-    position: relative;
-    display: inline-block;
-    padding: 10px 20px;
-    color: #000000;
-    font-size: 14px;
-    text-decoration: none;
-    text-transform: uppercase;
-    overflow: hidden;
-    margin-top: 0px;
-    letter-spacing: 2px
-}
-  
-.login-box a span {
-    position: absolute;
-    display: block;
+  top: -20px;
+  left: 0;
+  color: #696969;
+  font-size: 12px;
 }
 
-  
+.login-box form a {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #000000;
+  font-size: 14px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  margin-top: 0px;
+  letter-spacing: 2px;
+}
+
+.login-box a span {
+  position: absolute;
+  display: block;
+}
+
 .login-box a span:nth-child(1) {
-    bottom: 2px;
-    left: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(90deg, transparent, #ffffff);
-    animation: btn-anim1 2s linear infinite;
+  bottom: 2px;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #ffffff);
+  animation: btn-anim1 2s linear infinite;
 }
 
 .darkmode {
-    color: white;
-    margin-left: 54%;
+  color: white;
+  margin-left: 54%;
 }
 
 .darkmode button {
-    
 }
