--- a/styles/login.css
+++ b/styles/login.css
@@ -1,4 +1,3 @@
-
 body.dark-mode {
   background-color: #a7a8d7;
 }
@@ -10,7 +9,7 @@ body.dark-mode {
   margin-top: 10px;
 }
 
-.dark-mode .login-box{
+.dark-mode .login-box {
   position: absolute;
   top: 55%;
   left: 50%;
@@ -30,7 +29,7 @@ body.dark-mode {
   padding: 10px 0;
   font-size: 16px;
   color: #d8d6d6;
-  margin-bottom: 25px; 
+  margin-bottom: 25px;
   border: none;
   border-bottom: 1px solid #fdfdfd;
   outline: none;
@@ -45,7 +44,7 @@ body.dark-mode {
   font-size: 16px;
   color: #d8d6d6;
   pointer-events: none;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .dark-mode .login-box .user-box input:focus ~ label,
@@ -66,7 +65,7 @@ body.dark-mode {
   text-transform: uppercase;
   overflow: hidden;
   margin-top: 0px;
-  letter-spacing: 2px
+  letter-spacing: 2px;
 }
 
 .dark-mode #login {
@@ -77,7 +76,7 @@ body.dark-mode {
   text-transform: uppercase;
   overflow: hidden;
   margin-top: 0px;
-  letter-spacing: 2px
+  letter-spacing: 2px;
 }
 
 .dark-mode button {
@@ -95,33 +94,33 @@ body.dark-mode {
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background-color:  #023859;
-    display: flex;
-    justify-content: center;
-    height: 100vh;
-    margin-top: 6%;
+  font-family: Arial, sans-serif;
+  background-color: #023859;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  margin-top: 6%;
 }
 
 button {
-    padding: 10px 20px;
-    background-color: #F2B807;
-    color: #f2f2f2;
-    border: none;
-    border-radius: 13px;
-    cursor: pointer;
-    font-size: 16px;
+  padding: 10px 20px;
+  background-color: #f2b807;
+  color: #f2f2f2;
+  border: none;
+  border-radius: 13px;
+  cursor: pointer;
+  font-size: 16px;
 }
 
 /* Cor padrão do DETRAN Joinville */
 button:hover {
-    background-color: #0056b3;
+  background-color: #0056b3;
 }
 
 #btn {
-    text-align: center;
-    margin-bottom: 5px;
-    margin-top: 5px;
+  text-align: center;
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 
 #processa {
@@ -130,16 +129,16 @@ button:hover {
 }
 
 #foto img {
-    border-radius: 50%;
-    border-color: rgb(204, 204, 204);
-    border-width: 3px;
-    border-style:solid;
-    width: 100px;
-    margin-bottom: 5%;
+  border-radius: 50%;
+  border-color: rgb(204, 204, 204);
+  border-width: 3px;
+  border-style: solid;
+  width: 100px;
+  margin-bottom: 5%;
 }
 
 #foto {
-    text-align: center;
+  text-align: center;
 }
 
 #login {
@@ -150,101 +149,100 @@ button:hover {
   text-transform: uppercase;
   overflow: hidden;
   margin-top: 0px;
-  letter-spacing: 2px
+  letter-spacing: 2px;
 }
 
-#EPTRAN{
+#EPTRAN {
   justify-content: center;
   display: flex;
 }
 .ESS {
-    color: #000000;
-    text-align: center;
-    margin-bottom: 10px;
-    margin-top: 10px;
+  color: #000000;
+  text-align: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .login-box {
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    width: 330px;
-    padding-left: 35px;
-    padding-right: 35px;
-    padding-top: 20px;
-    transform: translate(-50%, -50%);
-    background: rgba(255, 255, 255, 0.987);
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
-    border-radius: 10px;
-  }
-  
-  .login-box .user-box {
-    position: relative;
-  }
-  
-  .login-box .user-box input {
-    width: 100%;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #474747;
-    margin-bottom: 25px;
-    border: none;
-    border-bottom: 1px solid #000000;
-    outline: none;
-    background: transparent;
-  }
-  
-  .login-box .user-box label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #474747;
-    pointer-events: none;
-    transition: .5s;
-  }
-  
-  .login-box .user-box input:focus ~ label,
-  .login-box .user-box input:valid ~ label {
-    top: -20px;
-    left: 0;
-    color: #696969;
-    font-size: 12px;
-  }
-  
-  .login-box form a {
-    position: relative;
-    display: inline-block;
-    padding: 10px 20px;
-    color: #000000;
-    font-size: 14px;
-    text-decoration: none;
-    text-transform: uppercase;
-    overflow: hidden;
-    margin-top: 0px;
-    letter-spacing: 2px
-  }
-  
-  .login-box a span {
-    position: absolute;
-    display: block;
-  }
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  width: 330px;
+  padding-left: 35px;
+  padding-right: 35px;
+  padding-top: 20px;
+  transform: translate(-50%, -50%);
+  background: rgba(255, 255, 255, 0.987);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+}
 
-  
-  .login-box a span:nth-child(1) {
-    bottom: 2px;
-    left: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(90deg, transparent, #ffffff);
-    animation: btn-anim1 2s linear infinite;
-  }
+.login-box .user-box {
+  position: relative;
+}
 
-  .darkmode {
-    color: rgb(0, 0, 0);
-    margin-left: 54%;
+.login-box .user-box input {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #474747;
+  margin-bottom: 25px;
+  border: none;
+  border-bottom: 1px solid #000000;
+  outline: none;
+  background: transparent;
+}
+
+.login-box .user-box label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #474747;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+.login-box .user-box input:focus ~ label,
+.login-box .user-box input:valid ~ label {
+  top: -20px;
+  left: 0;
+  color: #696969;
+  font-size: 12px;
+}
+
+.login-box form a {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #000000;
+  font-size: 14px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  margin-top: 0px;
+  letter-spacing: 2px;
+}
+
+.login-box a span {
+  position: absolute;
+  display: block;
+}
+
+.login-box a span:nth-child(1) {
+  bottom: 2px;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #ffffff);
+  animation: btn-anim1 2s linear infinite;
+}
+
+.darkmode {
+  color: rgb(0, 0, 0);
+  margin-left: 54%;
 }
 
 #entrar {
@@ -273,7 +271,7 @@ button:hover {
   right: 0;
   bottom: 0;
   background-color: #e2e2e2;
-  transition: .4s;
+  transition: 0.4s;
   border-radius: 30px;
 }
 
@@ -287,7 +285,7 @@ button:hover {
   bottom: 2px;
   z-index: 2;
   background-color: #838383;
-  transition: .4s;
+  transition: 0.4s;
 }
 
 .moon svg {
@@ -310,12 +308,12 @@ button:hover {
   height: 24px;
 }
 
-/* .switch:hover */.sun svg {
+/* .switch:hover */
+.sun svg {
   animation: rotate 15s linear infinite;
 }
 
 @keyframes rotate {
- 
   0% {
     transform: rotate(0);
   }
@@ -325,12 +323,12 @@ button:hover {
   }
 }
 
-/* .switch:hover */.moon svg {
+/* .switch:hover */
+.moon svg {
   animation: tilt 5s linear infinite;
 }
 
 @keyframes tilt {
- 
   0% {
     transform: rotate(0deg);
   }
