--- a/styles/login.css
+++ b/styles/login.css
@@ -1,3 +1,5 @@
+
+/*darkmode
 body.dark-mode {
   background-color: #a7a8d7;
 }
@@ -8,6 +10,7 @@ body.dark-mode {
   margin-bottom: 10px;
   margin-top: 10px;
 }
+
 
 .dark-mode .login-box {
   position: absolute;
@@ -92,7 +95,7 @@ body.dark-mode {
 .dark-mode button:hover {
   background-color: #d1883a;
 }
-
+*/
 body {
   font-family: Arial, sans-serif;
   background-color: #023859;
